change brand name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Matcha Haven - Premium Matcha Products</title>
     <meta name="description" content="A cozy matcha shop offering premium matcha products sourced directly from Japan. Explore our ceremonial grade matcha, culinary grade matcha, and accessories.">
     <meta name="keywords" content="matcha, matcha powder, japanese tea, green tea, ceremonial matcha, culinary matcha">
-    <meta name="author" content="Matcha Haven">
+    <meta name="author" content="Yukai Matcha">
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
         <div class="container">
             <nav class="main-nav">
                 <div class="logo">
-                    <a href="#hero">Matcha Haven</a>
+                    <a href="#hero">Yukai Matcha</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#hero">Home</a></li>
@@ -50,7 +50,7 @@
     <section id="hero" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Welcome to Matcha Haven</h1>
+                <h1>Welcome to Yukai Matcha</h1>
                 <p class="accent-text">A cozy place for matcha lovers</p>
                 <p>Experience the finest quality matcha in a warm, inviting atmosphere</p>
                 <a href="#products" class="btn">Explore Our Products</a>
