update styling and placeholder img files

--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matcha Haven - Premium Matcha Products</title>
-    <meta name="description" content="A cozy matcha shop offering premium matcha products sourced directly from Japan. Explore our ceremonial grade matcha, culinary grade matcha, and accessories.">
+    <title>Yukai Matcha - Premium Matcha Products</title>
+    <meta name="description"
+        content="A cozy matcha shop offering premium matcha products sourced directly from Japan. Explore our ceremonial grade matcha, culinary grade matcha, and accessories.">
     <meta name="keywords" content="matcha, matcha powder, japanese tea, green tea, ceremonial matcha, culinary matcha">
     <meta name="author" content="Yukai Matcha">
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&family=Caveat&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&family=Caveat&display=swap"
+        rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Favicon -->
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <!-- Skip to Content Link for Accessibility -->
     <a href="#main-content" class="skip-to-content">Skip to Content</a>
@@ -25,7 +30,9 @@
         <div class="container">
             <nav class="main-nav">
                 <div class="logo">
-                    <a href="#hero">Yukai Matcha</a>
+                    <a href="#hero">
+                        <img src="assets/icons/yukai-logo.svg" alt="Yukai Matcha" class="logo-image">
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#hero">Home</a></li>
@@ -65,10 +72,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="accent-text">A journey of passion and tradition</p>
-                    <p>Welcome to Matcha Haven, where passion for authentic matcha meets cozy ambiance. Our journey began with a simple love for the calming ritual of preparing and enjoying matcha.</p>
-                    <p>We carefully source our matcha directly from small farms in Japan, ensuring the highest quality and most authentic experience for our customers.</p>
-                    <p>Every product in our shop is selected with care, focusing on sustainability and traditional preparation methods that honor the rich history of matcha.</p>
-                    
+                    <p>Welcome to Yukai Matcha, where passion for authentic matcha meets cozy ambiance. Our journey
+                        began with a simple love for the calming ritual of preparing and enjoying matcha.</p>
+                    <p>We carefully source our matcha directly from small farms in Japan, ensuring the highest quality
+                        and most authentic experience for our customers.</p>
+                    <p>Every product in our shop is selected with care, focusing on sustainability and traditional
+                        preparation methods that honor the rich history of matcha.</p>
+
                     <div class="about-features">
                         <div class="feature">
                             <i class="fas fa-leaf"></i>
@@ -216,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="payment-confirmation">
                     <p>Once you've completed the payment, click the button below:</p>
                     <button id="payment-sent-btn" class="btn">I've Sent the Payment</button>
@@ -242,13 +252,14 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2 class="section-title text-center">Get in Touch</h2>
-            <p class="text-center contact-intro">Have questions about our products or want to share your matcha experience? We'd love to hear from you!</p>
+            <p class="text-center contact-intro">Have questions about our products or want to share your matcha
+                experience? We'd love to hear from you!</p>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-card">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <p>hello@matchahaven.com</p>
+                            <p>hello@yukaimatcha.com</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -314,7 +325,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>Matcha Haven</h3>
+                    <h3>Yukai Matcha</h3>
                     <p class="accent-text">A cozy place for matcha lovers</p>
                 </div>
                 <div class="footer-links">
@@ -327,7 +338,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Matcha Haven. All rights reserved.</p>
+                <p>&copy; 2025 Yukai Matcha. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -340,4 +351,5 @@
     <script src="js/cart.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
